[gd_scene load_steps=13 format=2]

[ext_resource path="res://Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://characters/hpIcon.png" type="Texture" id=2]
[ext_resource path="res://characters/hpBar.png" type="Texture" id=3]
[ext_resource path="res://characters/hpBarBack.png" type="Texture" id=4]
[ext_resource path="res://characters/HPBar.gd" type="Script" id=5]
[ext_resource path="res://areas/MPHighlight.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/ultBar.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.235294, 0.109804, 0.109804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 1, 0.0862745, 0.0862745, 0.6 )
shadow_size = 6

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.235294, 0.109804, 0.109804, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 1, 1, 1, 0.6 )

[sub_resource type="DynamicFont" id=6]
size = 11
outline_size = 2
outline_color = Color( 0.14902, 0.145098, 0.12549, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.796078, 0.0980392, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "full"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.796078, 0.0980392, 1 ), Color( 1, 0.313726, 0.101961, 1 ) ]
}

[node name="HPBar" type="Node2D"]
z_as_relative = false
script = ExtResource( 5 )
mpHigh = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
margin_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.54902 )
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -29.0
margin_top = -14.0
margin_right = 29.0
margin_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
margin_left = 9.0
margin_right = 49.0
margin_bottom = 17.0
mouse_filter = 2
custom_constants/separation = 2
alignment = 1

[node name="Sprite" type="TextureRect" parent="Panel2/HBoxContainer"]
margin_left = 2.0
margin_right = 17.0
margin_bottom = 17.0
rect_min_size = Vector2( 15, 0 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel2/HBoxContainer"]
margin_left = 19.0
margin_top = 1.0
margin_right = 37.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 6 )
text = "100"

[node name="TextureProgress" type="TextureProgress" parent="."]
modulate = Color( 1, 1, 1, 0.152941 )
margin_left = -30.0
margin_top = 4.0
margin_right = 30.0
margin_bottom = 9.0
mouse_filter = 2
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )

[node name="Ult" type="TextureProgress" parent="."]
visible = false
modulate = Color( 1, 0.796078, 0.0980392, 1 )
self_modulate = Color( 1, 1, 1, 0.54902 )
margin_left = -30.0
margin_top = -19.0
margin_right = 30.0
margin_bottom = -14.0
mouse_filter = 2
max_value = 5.0
value = 5.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ult"]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/full = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="States" type="HBoxContainer" parent="."]
margin_left = -161.0
margin_top = -15.0
margin_right = 376.0
margin_bottom = 17.0
grow_horizontal = 2
grow_vertical = 0
rect_scale = Vector2( 0.6, 0.6 )
mouse_filter = 2
alignment = 1

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Name" type="Label" parent="."]
visible = false
margin_left = -100.0
margin_top = -10.0
margin_right = 100.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 6 )
text = "Name"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="timeout"]
[connection signal="timeout" from="Timer2" to="." method="mpPing"]
